laravel/laravel-service.yml
apiVersion: v1
kind: Service
metadata:
  name: laravel-service
  namespace: laravel
spec:
  type: LoadBalancer
  selector:
    app: laravel
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
