laravel/mysql-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: laravel
spec:
  selector:
    app: mysql
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
